--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -12,7 +12,7 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
-client.urlPart=
+client.urlPart=/Home
 compile.jsps=false
 conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
@@ -25,6 +25,7 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+endorsed.classpath=
 excludes=
 file.reference.gson-2.8.2.jar=lib\\gson-2.8.2.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
@@ -71,7 +72,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
